Fix mobile overflow of footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -336,6 +336,7 @@ li:target {
   display: list-item;
   color: var(--text);
 
+  max-width: fit-content;
   margin-bottom: var(--copy-spacing);
 
   & *:last-child {
